--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
  */
 
 .example img {
-  border: 1px solid #fff;
-  margin: 1px;
-  padding; 0px;
+  border: 5px solid #fff;
+  margin: 5px;
+  padding: 5px;
   }
 
 /* Links */
